# luster

./: .env  Cargo.toml  README.md  luster.db
.github/workflows/: rust.yml
migrations/2023-11-18-110816_create_todo_table/: down.sql  up.sql
src/: args.rs  config.rs  lib.rs  main.rs  schema.rs
src/commands/: add.rs  done.rs  list.rs  mod.rs
src/models/: error.rs  mod.rs  todo.rs
src/utils/: date_util.rs  db_util.rs  json_util.rs  mod.rs
