[package]
name = "luster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = [] }
clap = { version = "4.4.8", features = ["derive"] }
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
diesel = { version = "2.1.4", features = ["sqlite", "chrono"] }
dotenv = "0.15.0"